added file for linking diseases to id/link

--- a/Disease-Symptom Dataset.ipynb
+++ b/Disease-Symptom Dataset.ipynb
@@ -2069,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2083,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2107,6 +2107,23 @@
     "\n",
     "def print_accuracy(y_test, y_pred):\n",
     "    print(\"Accuracy: {}\".format(metrics.accuracy_score(y_test, y_pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_accuracy(y_test, model_predict(X_train, y_train, X_test))"
    ]
   },
   {
