add time complexity cell

--- a/data-reorganize.ipynb
+++ b/data-reorganize.ipynb
@@ -371,13 +371,21 @@
    "outputs": [],
    "source": [
     "import heapq\n",
+    "\n",
+    "# time-complexity: O(N*max(M, log(N))) \n",
     "def prune_df(df, top_num_diseases):\n",
     "    h = []\n",
+    "    \n",
+    "    # time-complexity: O(N*max(M, log(N))) \n",
+    "    # O(N) - rows\n",
     "    for i in range(len(df)):\n",
+    "        # O(M) - cols\n",
     "        row_sum = sum(df.iloc[i][:-1])\n",
+    "        # O(log(N))\n",
     "        heapq.heappush(h, (-row_sum, i))\n",
     "    \n",
     "    # capture top diseases based on symptom frequency\n",
+    "    # time-complexity: O(N) * O(1) = O(N)\n",
     "    top_diseases = [heapq.heappop(h)[1] for i in range(top_num_diseases)]\n",
     "    \n",
     "    # create new data frame of top diseases\n",
@@ -388,6 +396,58 @@
     "            del top_df[col]\n",
     "    \n",
     "    return top_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nfor item in apples: # time-complexity: O(N)\\n    print(item)\\n\\n# time-complexity: O(N*M * log(M))\\nfor item in apples:\\n    # O(N)\\n    for buyer in buyers:\\n        print(buyer)\\n    \\n    # O(M*log(M))\\n    sort(buyers)\\n\\n\\nfor i in range(len(matrix)): # time-complexity: O(N*M)\\n    for j in range(len(matrix[0])):\\n        print(matrix[i][j])\\n\\nprint(apples[0]) # time-complexity: O(1)\\n\\n# binary search time-complexity: O(log(N))\\n\\n# sort a unorder list: O(N*log(N))\\n\\n# heap (min-heap/max-heap)\\n# add elm to heap: O(log(N))\\n# grab/pop your min-value from min-heap: O(1) # constant\\n\\n# add element to a list: O(1)\\n# find element in list: O(N)\\n\\n# O(1) <= O(log(N)) <= O(N) <= O(N*log(N)) <= O(N^2) <= ...\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "for item in apples: # time-complexity: O(N)\n",
+    "    print(item)\n",
+    "\n",
+    "# time-complexity: O(N*M * log(M))\n",
+    "for item in apples:\n",
+    "    # O(N)\n",
+    "    for buyer in buyers:\n",
+    "        print(buyer)\n",
+    "    \n",
+    "    # O(M*log(M))\n",
+    "    sort(buyers)\n",
+    "\n",
+    "\n",
+    "for i in range(len(matrix)): # time-complexity: O(N*M)\n",
+    "    for j in range(len(matrix[0])):\n",
+    "        print(matrix[i][j])\n",
+    "\n",
+    "print(apples[0]) # time-complexity: O(1)\n",
+    "\n",
+    "# binary search time-complexity: O(log(N))\n",
+    "\n",
+    "# sort a unorder list: O(N*log(N))\n",
+    "\n",
+    "# heap (min-heap/max-heap)\n",
+    "# add elm to heap: O(log(N))\n",
+    "# grab/pop your min-value from min-heap: O(1) # constant\n",
+    "\n",
+    "# add element to a list: O(1)\n",
+    "# find element in list: O(N)\n",
+    "\n",
+    "# O(1) <= O(log(N)) <= O(N) <= O(N*log(N)) <= O(N^2) <= ...\n",
+    "\"\"\""
    ]
   },
   {
@@ -737,9 +797,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'new_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-5ec651b3f544>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mx_cols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mIndex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_cols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'disease'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'new_df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
