pretty up notebook

--- a/Disease-Symptom Dataset.ipynb
+++ b/Disease-Symptom Dataset.ipynb
@@ -1,8 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Disease Classifier Workbook\n",
+    "\n",
+    "### Authors: Konner Macias, Jeeth Pawar\n",
+    "\n",
+    "This notebook contains all the data-wrangling, and modeling code for predicting a disease based on symptoms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,31 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['MeSH Symptom Term', 'MeSH Disease Term', 'PubMed occurrence',\n",
-       "       'TFIDF score'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "df = pd.DataFrame.from_records(my_data[1:], columns = my_data[0])\n",
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -63,6 +57,8 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame.from_records(my_data[1:], columns = my_data[0])\n",
     "df.columns = ['symptom','disease','n','score']\n",
     "df['symptom'] = df['symptom'].astype('category')\n",
     "df['disease'] = df['disease'].astype('category')\n",
@@ -71,8 +67,16 @@
     "df = df.sort_values(by=['disease', 'symptom', 'n', 'score'])\n",
     "possible_diseases = set(df['disease'])\n",
     "possible_symptoms = set(df['symptom'])\n",
+    "disease_names = list(possible_diseases)\n",
     "print('# Unique Diseases: {}'.format(len(possible_diseases)))\n",
     "print('# Unique Symptoms: {}'.format(len(possible_symptoms)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save OG Dataframe"
    ]
   },
   {
@@ -86,17 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['symptom_encod'] = df['symptom'].cat.codes\n",
-    "df['disease_encod'] = df['disease'].cat.codes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +176,7 @@
        "4  2.227056  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,6 +185,23 @@
     "import pandas as pd\n",
     "df = pd.read_csv('symptom_disease_dataset.csv')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encode Symptom and Disease Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['symptom_encod'] = df['symptom'].cat.codes\n",
+    "df['disease_encod'] = df['disease'].cat.codes"
    ]
   },
   {
@@ -206,23 +217,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Disease To Symptom Classifier\n",
-    "\n",
-    "## Path To Completion\n",
-    "\n",
-    "1. Reformat data-frame to have symp_1, ..., symp_n, disease_i for each row, with the values being the occurence of symptom j within 1 <= j <= n for disease i.\n",
-    "\n",
-    "2. Create simulated training and testing data for each disease which match original data's original frequency distribution\n",
-    "\n",
-    "3. Run random forests model on data\n",
-    "\n",
-    "## Step 1 - Reformat Data-Frame"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 116,
    "metadata": {},
@@ -234,7 +228,16 @@
     "for i, symp_i in enumerate(symptom_encod):\n",
     "    new_col_names[i] = \"symp_\" + str(symp_i)\n",
     "\n",
-    "new_col_names.append(\"disease\")"
+    "new_col_names.append(\"disease\")\n",
+    "disease_encod = set(df['disease_encod'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build Compressed Dataframe\n",
+    "Each row represents all the symptom occurrences corresponding with a disease ID."
    ]
   },
   {
@@ -243,29 +246,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "disease_encod = set(df['disease_encod'])\n",
+    "# create initial sparse dataframe\n",
     "new_df = pd.DataFrame([[0]*len(new_col_names) for _ in range(len(disease_encod))], columns=new_col_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# test grabbing 'n'\n",
-    "df[(df.disease_encod == 1) & (df.symptom_encod == 312)][['n']].iloc[0]['n']"
    ]
   },
   {
@@ -350,6 +332,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read in Compressed Dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -361,6 +350,56 @@
     "# make columns floating point data types\n",
     "for col in new_df.columns[:-1]:\n",
     "    new_df[col] = new_df[col].astype('float')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dimensionality Reduction\n",
+    "\n",
+    "Only consider top N diseases based on symptom occurrence count. Prune any symptom columns which do not correspond with those top N diseases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "# time-complexity: O(N*max(M, log(N))) \n",
+    "def prune_df(df, top_num_diseases):\n",
+    "    h = []\n",
+    "    \n",
+    "    # time-complexity: O(N*max(M, log(N))) \n",
+    "    # O(N) - rows\n",
+    "    for i in range(len(df)):\n",
+    "        # O(M) - cols\n",
+    "        row_sum = sum(df.iloc[i][:-1])\n",
+    "        # O(log(N))\n",
+    "        heapq.heappush(h, (-row_sum, i))\n",
+    "    \n",
+    "    # capture top diseases based on symptom frequency\n",
+    "    # time-complexity: O(N) * O(1) = O(N)\n",
+    "    top_diseases = [heapq.heappop(h)[1] for i in range(top_num_diseases)]\n",
+    "    \n",
+    "    # create new data frame of top diseases\n",
+    "    top_df = df[df.disease.isin(top_diseases)]\n",
+    "    for col in top_df.columns[:-1]:\n",
+    "        # if symptom has 0 occurrences, delete\n",
+    "        if not top_df[col].any():\n",
+    "            del top_df[col]\n",
+    "    \n",
+    "    return top_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modeling Functions"
    ]
   },
   {
@@ -406,9 +445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Goal: Artificially Augment the data\n",
-    "- 1. Identify distribution of data\n",
-    "- 2. Randomly create new data and append to dataframe"
+    "## Visualize Symptom Distribution for a Disease ID"
    ]
   },
   {
@@ -432,32 +469,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "def apply_noise(df, mu=0, sigma=0.1, round=True):\n",
-    "    n_rows, n_cols = len(df), len(df.columns)\n",
-    "    noise = np.random.normal(mu, sigma, [n_rows, n_cols])\n",
-    "    return df + noise"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# not good enough\n",
-    "# capture mu and sigma for each symptom\n",
-    "def get_mu(col):\n",
-    "    return sum(col)/len(col) if len(col) else 0\n",
-    "\n",
-    "def get_sigma(col, mu=0.1):\n",
-    "    n = len(col)\n",
-    "    return sum((col-mu)**2)/n"
+    "## Create Row Proportions of Compressed Dataframe"
    ]
   },
   {
@@ -513,6 +528,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read In Row Proportions Dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -536,11 +558,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Row-proportions complete!\n",
+    "## Create Artificial Training Data\n",
     "\n",
-    "Now what?\n",
-    "\n",
-    "Artificial data creation...\n",
     "\n",
     "Let's say for a given disease, we have proportions: `[0.1, 0.2, 0.7]`.\n",
     "\n",
@@ -548,7 +567,7 @@
     "\n",
     "Now apply the proportions: `[10, 50, 280]`\n",
     "\n",
-    "Recalculate the row-proportions: `[.027, 0.205, .788]` This is our new row of data."
+    "Recalculate the row-proportions: `[.029, 0.147, .823]` This is our new row of data."
    ]
   },
   {
@@ -638,6 +657,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare for Big Data Creation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -715,6 +741,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build Artificial Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -734,6 +767,13 @@
    "source": [
     "### Run this for artificial data creation!\n",
     "# multi_thread(len(big_data), 1, apply_artificial_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load in Artificial Data"
    ]
   },
   {
@@ -831,6 +871,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build Random Forests Classifier Model & Predict"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -854,6 +901,13 @@
    ],
    "source": [
     "print_accuracy(y_test, model_predict(clf, X_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pickle Model to be used by Web App"
    ]
   },
   {
@@ -894,7 +948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
